# massgitleaks

./: .gitignore  README.md  install.py  massgitleaks.py  pyproject.toml  requirements.txt
.github/workflows/: pypi-publish.yml  python-publish.yml
